# mcp-datatools

./: LICENSE  README.md  docker-compose.db.yml  pyproject copy.toml  pyproject.toml
config/: settings.py
data/init_scripts/: init_sqlite_db.py  mysql.sql  postgresql.sql
src/mcp_datatools/: database.py  server.py  utils.py
tests/: verify_functions.py
